--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "3.2.5",
     "rimraf": "5.0.1",
     "ts-node": "10.9.2",
     "typescript": "5.4.5"
