--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "3.2.5",
     "rimraf": "5.0.1",
     "ts-node": "10.9.2",
+    "tslib": "2.6.2",
     "typescript": "5.4.5"
   },
   "type": "module",
