--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "npm run build && node ./dist/main.js",
+    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime SYS:standard",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -25,6 +25,7 @@
     "eslint-config-htmlacademy": "9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.2.5",
+    "pino-pretty": "11.0.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
@@ -39,6 +40,7 @@
     "chalk": "^5.3.0",
     "dayjs": "1.11.11",
     "got": "14.2.1",
-    "json-server": "0.17.3"
+    "json-server": "0.17.3",
+    "pino": "9.0.0"
   }
 }
