--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "dayjs": "1.11.11",
+    "dotenv": "16.4.5",
     "got": "14.2.1",
     "json-server": "0.17.3",
     "pino": "9.0.0"
