--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "dayjs": "1.11.11",
     "dotenv": "16.4.5",
     "got": "14.2.1",
+    "inversify": "6.0.2",
     "json-server": "0.17.3",
-    "pino": "9.0.0"
+    "pino": "9.0.0",
+    "reflect-metadata": "0.2.2"
   }
 }
