--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime SYS:standard",
+    "start": "npm run build && node ./dist/main.rest.js",
+    "start:dev": "nodemon",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "nodemon": "3.1.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "3.2.5",
     "pino-pretty": "11.0.0",
