--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/convict": "6.1.6",
     "@types/convict-format-with-validator": "6.0.5",
+    "@types/express": "4.17.21",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -47,7 +48,9 @@
     "chalk": "^5.3.0",
     "dayjs": "1.11.11",
     "dotenv": "16.4.5",
+    "express": "4.19.2",
     "got": "14.2.1",
+    "http-status-codes": "2.3.0",
     "inversify": "6.0.2",
     "mongoose": "8.3.4",
     "json-server": "0.17.3",
